# LLM_intention_detection_public

./: LICENSE  readme.md
2_main_experiment/: important_notes.txt  pyproject.toml
2_main_experiment/data/: concatenated_data.jsonl  concatenated_data_with_four_options.jsonl  create_desc_annotated_data.py  description_table.xlsx  prompt_for_gpt4.jsonl  raw_data.jsonl  test_data_annotated_by_human.xlsx
2_main_experiment/data/annotated_test_data/: result_conv_id_117.csv  result_conv_id_117_upload.csv  result_conv_id_130.csv  result_conv_id_130_upload.csv  result_conv_id_187.csv  result_conv_id_187_summary.csv  result_conv_id_187_upload.csv  result_conv_id_191.csv  result_conv_id_191_upload.csv  result_conv_id_198.csv  result_conv_id_198_summary.csv  result_conv_id_198_upload.csv  result_conv_id_199.csv  result_conv_id_199_upload.csv  result_conv_id_202.csv  result_conv_id_202_summary.csv  result_conv_id_202_upload.csv  result_conv_id_214.csv  result_conv_id_214_upload.csv  result_conv_id_217.csv  result_conv_id_217_summary.csv  result_conv_id_217_upload.csv  result_conv_id_233.csv  result_conv_id_233_upload.csv  result_conv_id_235.csv  result_conv_id_235_summary.csv  result_conv_id_235_upload.csv  result_conv_id_244.csv  result_conv_id_244_summary.csv  result_conv_id_244_upload.csv  result_conv_id_250.csv  result_conv_id_250_summary.csv  result_conv_id_250_upload.csv  result_conv_id_265.csv  result_conv_id_265_upload.csv  result_conv_id_267.csv  result_conv_id_267_upload.csv  result_conv_id_269.csv  result_conv_id_269_summary.csv  result_conv_id_269_upload.csv  (+35 more)
(+516 files in other folders)
